<resources>
    <string name="app_name">Triton Meal Planner</string>

    <!-- Used in view_sort_options.xml -->
    <string name="sorting_title">Sorting Options</string>
    <string name="minimum_title">Minimum</string>
    <string name="min">Min</string>
    <string name="maximum_title">Maximum</string>
    <string name="max">Max</string>
    <string name="criteria_title">Criteria</string>
    <string name="price_title">Price:</string>
    <string name="calories_title">Calories:</string>
    <string name="carb_title">Carb:</string>
    <string name="fat_title">Fat:</string>
    <string name="protein_title">Protein:</string>
    <string name="sugar_title">Sugar:</string>
    <string name="Calorie">Calorie</string>
    <string name="Price">Price($)</string>
    <string name="Protein">Protein(g)</string>
    <string name="Fat">Fat(g)</string>
    <string name="Carbs">Carbs(g)</string>
    <string name="RDI">Recommended Daily Intake</string>
    <string name="Email">Email</string>
    <string name="Name">Name</string>
    <string name="Height">Height</string>
    <string name="Weight">Weight(lb)</string>
    <string name="Feet">Feet</string>
    <string name="Inches">Inches</string>
    <string name="Recommended">Recommended</string>
    <string name="Save">Save</string>
    <string name="Edit">Edit</string>
    <string name="editProfile">Profile</string>
    <string name="editGoals">Goals</string>
    <string name="logout">Logout</string>
    <string name="Age">Age</string>
    <string name="Sex">Sex</string>

    <!-- Used in dialog_view_meal_sort.xml -->
    <string-array name = "priceArray">
        <item>None</item>
        <item>0-4</item>
        <item>4-7</item>
        <item>7+</item>

    </string-array>

    <string-array name = "calorieArray">
        <item>None</item>
        <item>0-600</item>
        <item>600-1200</item>
        <item>1200-2000</item>
        <item>2000+</item>
    </string-array>

    <string-array name = "proteinArray">
        <item>None</item>
        <item>0-5</item>
        <item>5-15</item>
        <item>15-20</item>
        <item>20+</item>
    </string-array>

    <string-array name = "carbsArray">
        <item>None</item>
        <item>0-15</item>
        <item>15-25</item>
        <item>25-40</item>
        <item>40+</item>
    </string-array>

    <string-array name = "totFatArray">
        <item>None</item>
        <item>0-15</item>
        <item>15-30</item>
        <item>30-50</item>
        <item>50+</item>
    </string-array>

    <string-array name = "satFatArray">
        <item>None</item>
        <item>0-10</item>
        <item>10-20</item>
        <item>20-30</item>
        <item>30+</item>
    </string-array>

    <string-array name = "sodiumArray">
        <item>None</item>
        <item>0-600</item>
        <item>600-1200</item>
        <item>1200-2000</item>
        <item>2000+</item>
    </string-array>

    <string-array name = "cholesterolArray">
        <item>None</item>
        <item>0-50</item>
        <item>50-100</item>
        <item>100-150</item>
        <item>150+</item>
    </string-array>

    <string-array name = "fiberArray">
        <item>None</item>
        <item>0-5</item>
        <item>5-15</item>
        <item>15-30</item>
        <item>30+</item>
    </string-array>

    <string-array name = "sugarArray">
        <item>None</item>
        <item>0-15</item>
        <item>15-25</item>
        <item>25-40</item>
        <item>40+</item>
    </string-array>

    <string-array name="mealTimeArray">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
    </string-array>


    <string-array name="feet_array">
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="inches_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>

    </string-array>
    <string-array name="whatGender">
        <item>male</item>
        <item>female</item>
    </string-array>



    <string name="daily_goal">DAILY GOAL</string>

    <!-- Xinhe Zhang, 11/05/2017 -->

    <!-- General messages -->
    <string name="login">LOGIN</string>
    <string name="guest">LOGIN AS GUEST</string>
    <string name="forget">FORGET PASSWORD ?</string>
    <string name="signup">SIGNUP</string>
    <string name="confirm">CONFIRM</string>
    <string name="back">BACK</string>
    <string name="username">User name</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="reenter">Confirm Password</string>
    <string name="pattern">Password must be contains at least one digit and one letter</string>
    <string name="match">Re-entered password must match</string>

    <!-- Error messages -->
    <string name="error">ERROR</string>
    <string name="not_match">Password not match</string>
    <string name="ok">OK</string>
    <string name="empty">Username or password can not be empty</string>
    <string name="login_first">Please log in first</string>
    <string name="signup_first">Please sign up first</string>
    <string name="already_login">You have already logged in</string>
    <string name="already_signup">You have already signed up</string>


</resources>
