<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:paddingTop="50dp"
    android:paddingBottom="20dp">

    <!-- Xinhe Zhang, 11/05/2017 -->

    <TableLayout android:id="@+id/table1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/login"
            android:id="@+id/textview"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/username"
            android:id="@+id/textview1"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:textIsSelectable="true"
            android:gravity="center"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/etUsername"
            android:digits="abcdefghijklmnopqrstuvwxyz0123456789"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/password"
            android:id="@+id/textview2"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:textIsSelectable="true"
            android:gravity="center"
            android:textStyle="bold"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/etPassword"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:id="@+id/btLogin"
            android:layout_gravity="center"
            android:textSize="18sp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/guest"
            android:id="@+id/btGuest"
            android:layout_gravity="center"
            android:textSize="18sp"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:id="@+id/btGotoSignup"
            android:layout_gravity="center"
            android:textSize="18sp"/>
    </TableLayout>
</LinearLayout>