<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <!-- Xinhe Zhang, 11/05/2017 -->


    <FrameLayout
        android:id="@+id/frameLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/frameLayout"
        android:layout_alignParentStart="true"
        android:background="@color/white">

        <ImageView
            android:id="@+id/imageView1"
<<<<<<< HEAD
            android:layout_width="400dp"
            android:layout_height="249dp"
=======
            android:layout_width="match_parent"
            android:layout_height="match_parent"
>>>>>>> 4edf74d625e3074064401edf431fea00d07efded
            android:src="@drawable/triton"></ImageView>


    </FrameLayout>


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="400dp"
        android:layout_height="460dp"
        android:background="@color/white"
        android:layout_marginTop="239dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <TableLayout
            android:id="@+id/table1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:weightSum="1">


            <TextView
                android:id="@+id/textview1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1.37"
                android:gravity="center"
                android:text="@string/email"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textIsSelectable="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/textview2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/password"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textIsSelectable="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textview4"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:text="@string/pattern"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textIsSelectable="true"
                android:textSize="12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:text="@string/reenter"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textIsSelectable="true"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/textview5"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:text="@string/match"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textIsSelectable="true"
                android:textSize="12sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btSignup"
                android:layout_width="fill_parent"
                android:layout_height="33dp"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:background="#3d547f"
                android:text="sign up"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />


        </TableLayout>

    </FrameLayout>


</RelativeLayout>